tools/crates/vendor/toml_edit/tests/fixtures/invalid/string/multiline-bad-escape-4.stderr
TOML parse error at line 1, column 21
  |
1 | backslash = """\"""
  |                     ^
invalid multiline basic string
